--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/css/home/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,8 +15,8 @@
             <input id = "id" type="text" placeholder="아이디"/>
             <input id = "name" type="text" placeholder="이름"/>
             <input id = "pswd" type="password" placeholder="비밀번호"/>
-            <input id = "confrim-pswd" type="password" placeholder="비밀번호 확인"/>
-            <button>SIGN UP</button>
+            <input id = "confirm-pswd" type="password" placeholder="비밀번호 확인"/>
+            <p id = "button">SIGN UP</p>
             <p class="message">Already registered? <a href="/login">login</a></p>
           </form>
         </div>
